using System.ComponentModel.DataAnnotations;

namespace ClimateChangeIndicators.Data.Entities
{
    public class Organization
    {
        public int Id { get; set; }

        public string Name { get; set; } = "";
    }
}